fixes max width on mobile

--- a/Applications/landingPage/css/landingPageRedesign.css
+++ b/Applications/landingPage/css/landingPageRedesign.css
@@ -958,7 +958,7 @@ a:hover {
     }
 
     html, body {
-        max-width: 100%;
+        max-width: 100vw;
         overflow-x: hidden;
     }
 
